# boo

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  LICENSE  LINUX.md  LINUX_VT_MIGRATION.md  MACOS_VT_MIGRATION.md  PROFILING.md  README.md  REMOTE_IMPLEMENTATION_CHECKLIST.md  REMOTE_NIX_BUILDER.md  REMOTE_REQUIREMENTS.md  REMOTE_SSH_INTEGRATION_PLAN.md  ROADMAP.md  build.rs  deny.toml  flake.nix
bench/: README.md
docs/: index.md
ios/: README.md
scripts/: analyze-terminal-recording.py  build-ios-device.sh  capture-macos-window.sh  check-ios-device-state.sh  compare-ios-simulator-ipad-metrics.sh  compare-terminal-body.sh  deploy-ios-device.sh  gen-runtime-view-workload.py  gen-terminal-bench-corpus.sh  git-safe.sh  install-ios-device.sh  launch-ios-device.sh  list-ios-devices.sh  nix-build-remote-darwin.sh  nix-build-remote.sh  post-ax-key-repeat.c  profile-bench-scenario.sh  profile-linux-bench-client.sh  profile-linux-perf.sh  profile-macos-instruments.sh  profile-macos-sample-client.sh  profile-macos-sample.sh  profile-samply.sh  profiling-boo.sh  record-bench-scenario.sh  record-macos-window.swift  remote-stream-client.py  run-terminal-bench.sh  summarize-boo-profile.py  sync-remote-mac.sh  test-gui-client.sh  test-headless-scenarios.sh  test-headless.sh  test-ios-remote-view.sh  test-ios-ui.sh  test-latency-traces.sh  test-remote-clients.sh  test-remote-daemon-diagnostics.sh  test-remote-nix-profile-bootstrap.sh  test-remote-path-expansion.sh  (+11 more)
shell-integration/: README.md
src/: app_helpers.rs  app_input.rs  appkit.rs  backend.rs  bindings.rs  cli.rs  client_gui.rs  command_prompt.rs  config.rs  control.rs  copy_mode.rs  ffi.rs  keymap.rs  launch.rs  layout.rs  linux_terminal_canvas.rs  linux_vt_backend.rs  macos_vt_backend.rs  main.rs  pane.rs  profiling.rs  remote.rs  remote_auth.rs  remote_batcher.rs  remote_client.rs  remote_config_tests.rs  (+40 more)
(+65 files in other folders)
