[package]
name = "boo"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["wgpu", "tokio"] }
raw-window-handle = "0.6"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSThread", "NSString", "NSArray", "NSOperation"] }
objc2-app-kit = { version = "0.3", features = ["NSView", "NSWindow", "NSResponder", "NSPasteboard", "NSApplication", "NSRunningApplication", "NSColor", "NSEvent", "NSGraphics"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer", "CATransaction"] }
objc2-core-graphics = { version = "0.3", features = ["CGColor"] }

[target.'cfg(target_os = "linux")'.dependencies]
arboard = "3"
khronos-egl = { version = "6", features = ["dynamic"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-sys = { version = "0.31", features = ["egl", "client", "dlopen"] }
wayland-backend = { version = "0.3", features = ["client_system"] }

